@@ -24,7 +24,6 @@
 #include <KoImageData.h>
 #include <KoViewConverter.h>
 #include <KoImageCollection.h>
-#include <KoImageData.h>
 #include <KoShapeLoadingContext.h>
 #include <KoOdfLoadingContext.h>
 #include <KoShapeSavingContext.h>
